Products Catalog CRUD
Products, Categories Schema Validators

Mongo Schema Definitions

Swagger Docuemntation Models

Autogenerated TSOA Routes

Include CORS
