# src/controllers/categories/list.categories.controller.ts
@@ -1,23 +1,23 @@
-import { StatusCodes } from 'http-status-codes';
-import { IHttpRequest } from '../../helpers/callback';
+
+import { Request } from 'express';
 
 import { ICategoriesService } from '../../services/categories';
 
-import { IControllerResponse } from '..';
+import { Query } from '../../../domain/entities/query.model';
+
+import { Category } from '../../../domain/entities/models';
 
 export const buildListCategories = (service: ICategoriesService) => {
 	return async (
-		request: Partial<IHttpRequest>,
-	): Promise<IControllerResponse> => {
-		const categories = await service.listCategories(request.body);
-
-		return {
-			success: true,
-			message: "Success",
-			statusCode: StatusCodes.OK,
-			body: {
-				categories
-			}
+		request: Partial<Request>,
+	): Promise<{ categories: Category[] }> => {
+		let filters = request.body;
+		if (!request.body.filters) {
+			filters = [];
 		};
+
+		let query = new Query(filters, { offset: 0, limit: 0 }, {});
+
+		return { categories: await service.listCategories(query) }
 	};
 };
