# src/controllers/products/get.products.controller.ts
@@ -1,28 +1,25 @@
-import { Controller, Route, Get, Post, SuccessResponse } from "tsoa";
+import { Request } from 'express'
 
-import { StatusCodes } from 'http-status-codes';
-import { IHttpRequest } from '../../helpers/callback';
+import { Product, Query } from '../../../domain/entities/models'
 
 import { IProductsService } from '../../services/products';
 
-import { IControllerResponse } from '..';
-
-
 export const buildGetProducts = (service: IProductsService) => {
     return async (
-        request: Partial<IHttpRequest>,
-    ): Promise<IControllerResponse> => {
-        let productId: string = request.params ? request.params?.['id'] : "0";
-        let productID = parseInt(productId);
-        const products = await service.productDetail(productID);
+        request: Partial<Request>,
+    ): Promise<Product[]> => {
+        try {
+            let filters = request.body;
+            if (!request.body.filters) {
+                filters = [];
+            };
 
-        return {
-            success: true,
-            message: "Sucess",
-            statusCode: StatusCodes.OK,
-            body: {
-                products
-            }
-        };
+            let query = new Query(filters, { offset: 0, limit: 15 }, {});
+
+            return await service.listProducts(query);
+        } catch (e) {
+            throw e;
+
+        }
     };
 };
