# src/controllers/products/index.ts
@@ -1,13 +1,19 @@
-import { Controller, Route, Get, Post, Body, Request,Query, SuccessResponse } from "tsoa";
+import { Request as expressReq } from "express"
+import { Controller, Route, Get, Post, Put, Delete, Request, Body, SuccessResponse, Tags, Example } from 'tsoa';
+
+import { Product } from '../../../domain/entities/product.model';
 
 import { buildProductsRepo, IProductsRepo } from '../../infrastructure/repositories/products/products.repository';
-import { buildProductsService, IProductsService } from '../../services/products';
+import { ProductsService, IProductsService } from '../../services/products';
 
 import { buildListProducts } from './list.products.controller';
-import { buildPostProducts } from './post.products.controller';
-import { CustomController, IControllerResponse } from '..';
+import { buildProductDetail } from './detail.products.controller';
+import { buildInsertProducts } from './insert.products.controller';
+import { buildDeleteProduct } from './delete.products.controller';
+import { buildUpdateProduct } from './update.products.controller';
+import { buildSearchProducts } from './search.products.controller';
 
-@Route("/v1/products")
+@Route('/api/v1/products')
 export class ProductsControllers extends Controller {
   private readonly _productsRepo: IProductsRepo;
   private readonly _productsService: IProductsService;
@@ -15,53 +21,71 @@ export class ProductsControllers extends Controller {
   constructor() {
     super()
     this._productsRepo = buildProductsRepo()
-    this._productsService = buildProductsService(this._productsRepo)
+    this._productsService = new ProductsService(this._productsRepo)
   }
 
-  @Get("/")
+  @Get('/')
+  @Tags('Get')
   public async listProducts(
+    @Request() req: expressReq,
+  ): Promise<{ products: Product[] }> {
+    return buildListProducts(this._productsService)(req)
+  }
+
+  @Get('/:productID')
+  @Tags('Get')
+  public async productDetail(
+    @Request() req: expressReq
+  ): Promise<any> {
+    return buildProductDetail(this._productsService)(req)
+  }
+
+  @Post('/')
+  @Tags('Post', 'Insert', 'Create')
+  @SuccessResponse('201', 'Created')
+  public async insertProducts(
+    @Body() body: Product[],
     @Request() req: any
-  ): Promise<IControllerResponse> {
-    let listProducts = buildListProducts(this._productsService)
-    let response = await listProducts(req)
-
-    return response
+  ): Promise<any> {
+    if (body.length == 0) {
+      throw new Error("empty ProductsList");
+    }
+    return buildInsertProducts(this._productsService)(req)
   }
 
-  // @Post("/")
-  // public async getUser(
-  //   @Body() request: any
-  // ): Promise<IControllerResponse> {
-
-  //   const products = await this._productsService.listProducts(request.body);
-
-  //   return {
-  //     success: true,
-  //     message: "Sucess",
-  //     statusCode: 200,
-  //     body: {
-  //       products
-  //     }
-  //   };
-  // }
-
-
-
-  // @SuccessResponse("201", "Created")
-  // @Post("/")
-  public postProducts(): CustomController {
-    return buildPostProducts(this._productsService)
+  @Put('/:productID')
+  public async updateProduct(
+    @Request() req: expressReq
+  ): Promise<any> {
+    return buildUpdateProduct(this._productsService)(req)
   }
 
-  // public postProducts(): Controller {
-  //     return buildListProducts(this._productsService)
-  // }
+  @Delete('/:productID')
+  public async deleteProduct(
+    @Request() req: expressReq
+  ): Promise<any> {
+    return buildDeleteProduct(this._productsService)(req)
+  }
 
-  public getService(): IProductsService {
+  @Post('/search')
+  public async searchProducts(
+    @Request() req: any
+  ): Promise<any> {
+    return buildSearchProducts(this._productsService)(req)
+  }
+
+  @Post('/find')
+  public async findProducts(
+    @Request() req: any
+  ): Promise<any> {
+    return buildListProducts(this._productsService)(req)
+  }
+
+  public getService = (): IProductsService => {
     return this._productsService
   }
 
-  public getRepo(): IProductsRepo {
+  public getRepo = (): IProductsRepo => {
     return this._productsRepo
   }
 }
