# src/controllers/products/list.products.controller.ts
@@ -1,26 +1,23 @@
-import { Controller, Route, Get, Post, SuccessResponse } from "tsoa";
 
-import { StatusCodes } from 'http-status-codes';
-import { IHttpRequest } from '../../helpers/callback';
+import { Request } from 'express';
 
 import { IProductsService } from '../../services/products';
 
-import { IControllerResponse } from '..';
+import { Query } from '../../../domain/entities/query.model';
 
+import { Product } from '../../../domain/entities/models';
 
 export const buildListProducts = (service: IProductsService) => {
 	return async (
-		request: Partial<IHttpRequest>,
-	): Promise<IControllerResponse> => {
-		const products = await service.listProducts(request.body);
-
-		return {
-			success: true,
-			message: "Sucess",
-			statusCode: StatusCodes.OK,
-			body: {
-				products
-			}
+		request: Partial<Request>,
+	): Promise<{ products: Product[] }> => {
+		let filters = request.body;
+		if (!request.body.filters) {
+			filters = [];
 		};
+
+		let query = new Query(filters, { offset: 0, limit: 0 }, {});
+
+		return { products: await service.listProducts(query) }
 	};
 };
